# samutils

./: CLAUDE.md  Cargo.toml  Dioxus.toml  Justfile  sw.js
assets/: manifest.json  tailwind.css
src/: main.rs
src/components/: mod.rs  samutil_header.rs  tool_header.rs
src/tools/: mod.rs  qr_code.rs
